<resources>
    <string name="bin_iin">BIN/IIN</string>
    <string name="enter_bin_hint">Enter the first digits of a card number (BIN/IIN)</string>
    <string name="enter_bin_hint_not_found">Sorry, no card found</string>
    <string name="scheme_network">SCHEME / NETWORK</string>
    <string name="type">TYPE</string>
    <string name="brand">BRAND</string>
    <string name="prepaid">PREPAID</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="length">length</string>
    <string name="luhn">luhn</string>
    <string name="country">COUNTRY</string>
    <string name="bank">BANK</string>

    <string name="card">Card</string>
    <string name="history">History</string>
</resources>